--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.13.0",
-    "nos-ui-common": "^1.0.12",
+    "nos-ui-common": "^1.0.37",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.6.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
